--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             flex-grow: 1;
             background-color: #F9FAFB;
             overflow-y: auto;
+            height: 100%; /* Ensure the content area fills the full height */
         }
 
         .content {
@@ -115,6 +116,24 @@
         .content.active {
             display: block;
             transform: translateY(0);
+        }
+
+        /* Video iframe container */
+        .video-container {
+            position: relative;
+            padding-top: 56.25%; /* 16:9 Aspect Ratio */
+            height: 0;
+            overflow: hidden;
+            width: 100%;
+        }
+
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
         }
 
         /* Time display */
@@ -155,8 +174,14 @@
 
             .content-area {
                 margin-left: 0;
+                padding: 10px;
+            }
+
+            .dropdown-button {
+                font-size: 16px;
             }
         }
+
     </style>
 
     <script>
