--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
         <!-- Content sections -->
         <div id="tab1" class="content active">
-            <h1>SERVER CPU</h1>
+            <h1>TRUEID</h1>
             <div class="video-container">
                 <iframe src="https://vdo.ninja/?view=ie7VQBu" allowfullscreen></iframe>
             </div>
@@ -249,9 +249,9 @@
         </div>
 
         <div id="tab3" class="content">
-            <h1>LIVE STREAM</h1>
+            <h1>PC</h1>
             <div class="video-container">
-                <iframe src="https://vdo.ninja/?view=7EgRvbw" allowfullscreen></iframe>
+                <iframe src="https://vdo.ninja/?view=Diqkfuu&bitrate=20000" allowfullscreen></iframe>
             </div>
         </div>
 
