--- a/index.html
+++ b/index.html
@@ -20,6 +20,31 @@
             flex-direction: column;
             height: 100vh;
             overflow: hidden;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        /* Dark theme styles */
+        body.dark {
+            background-color: #121212;
+            color: #fff;
+        }
+
+        /* Button for theme toggle */
+        .theme-toggle {
+            background-color: #1A202C;
+            color: #fff;
+            border: none;
+            padding: 12px 20px;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            margin: 20px;
+            text-align: center;
+        }
+
+        .theme-toggle:hover {
+            background-color: #3B82F6;
         }
 
         /* Button for the dropdown menu */
@@ -100,7 +125,12 @@
             flex-grow: 1;
             background-color: #F9FAFB;
             overflow-y: auto;
-            height: 100%; /* Ensure the content area fills the full height */
+            height: 100%;
+            transition: background-color 0.3s ease;
+        }
+
+        .content-area.dark {
+            background-color: #1A202C;
         }
 
         .content {
@@ -111,6 +141,11 @@
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
             transform: translateY(20px);
             transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+
+        .content.dark {
+            background-color: #333;
+            color: #fff;
         }
 
         .content.active {
@@ -144,6 +179,10 @@
             font-weight: bold;
         }
 
+        .time.dark {
+            color: #A7C7FF;
+        }
+
         /* Status display */
         .wifi-status {
             position: absolute;
@@ -152,6 +191,10 @@
             font-size: 16px;
             color: green;
             font-weight: bold;
+        }
+
+        .wifi-status.dark {
+            color: lightgreen;
         }
 
         /* Responsive Design */
@@ -206,6 +249,17 @@
             }
         }
 
+        // Function to toggle theme
+        function toggleTheme() {
+            document.body.classList.toggle('dark');
+            document.querySelector('.content-area').classList.toggle('dark');
+            document.querySelectorAll('.content').forEach(function (content) {
+                content.classList.toggle('dark');
+            });
+            document.querySelector('.time').classList.toggle('dark');
+            document.querySelector('.wifi-status').classList.toggle('dark');
+        }
+
         window.onload = function () {
             setInterval(updateTime, 1000); // Update time every second
             setInterval(checkWifiStatus, 1000); // Check Wi-Fi status every second
@@ -214,6 +268,9 @@
 </head>
 
 <body>
+    <!-- Button to toggle theme -->
+    <button class="theme-toggle" onclick="toggleTheme()">สลับธีม</button>
+
     <!-- Button to toggle dropdown -->
     <div class="dropdown">
         <button class="dropdown-button">เมนู</button>
@@ -244,7 +301,7 @@
         <div id="tab2" class="content">
             <h1>INTERNET</h1>
             <div class="video-container">
-                <iframe src="https://vdo.ninja/?view=xUmxwEW" allowfullscreen></iframe>
+                <iframe src="https://vdo.ninja/?view=Diqkfuu&bitrate=20000" allowfullscreen></iframe>
             </div>
         </div>
 
