--- a/index.html
+++ b/index.html
@@ -6,317 +6,212 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PANUWAT_DEV</title>
     <link rel="icon" href="https://img5.pic.in.th/file/secure-sv1/IMG_076653e98b38560f08f3.jpeg" type="image/jpeg">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        /* Global styles */
+        /* Global Styles */
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Rubik', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f3f3f3;
+            background-color: #f9f9f9;
             color: #333;
             display: flex;
             flex-direction: column;
             height: 100vh;
-            overflow: hidden;
             transition: background-color 0.3s ease, color 0.3s ease;
         }
 
-        /* Dark theme styles */
+        /* Dark Theme */
         body.dark {
             background-color: #121212;
             color: #fff;
         }
 
-        /* Button for theme toggle */
-        .theme-toggle {
-            background-color: #1A202C;
-            color: #fff;
-            border: none;
-            padding: 12px 20px;
+        /* Navigation Bar */
+        .nav-bar {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(135deg, #00bcd4, #ff5722);
+            padding: 10px 0;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 100;
+        }
+
+        .nav-bar a {
+            text-decoration: none;
+            color: white;
             font-size: 18px;
+            font-weight: bold;
+            margin: 0 15px;
+            transition: color 0.3s ease;
+        }
+
+        .nav-bar a:hover {
+            color: #333;
+            text-decoration: underline;
+        }
+
+        /* Main Content Area */
+        .main-content {
+            margin-top: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            flex-grow: 1;
+            padding: 40px;
+            transition: transform 0.3s ease;
+        }
+
+        /* Card Layout for Pages */
+        .card {
+            width: 100%;
+            max-width: 500px;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        .card h2 {
+            font-size: 24px;
+            font-weight: 600;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        .card p {
+            font-size: 16px;
+            line-height: 1.5;
+            color: #666;
+        }
+
+        .card iframe {
+            width: 100%;
+            height: 400px;
+            border: none;
+            border-radius: 12px;
+        }
+
+        /* Theme Toggle Button */
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #00bcd4;
+            color: #fff;
+            padding: 12px 24px;
+            font-size: 18px;
+            border-radius: 50px;
+            border: none;
             cursor: pointer;
-            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease;
-            margin: 20px;
-            text-align: center;
         }
 
         .theme-toggle:hover {
-            background-color: #3B82F6;
-        }
-
-        /* Button for the dropdown menu */
-        .menu-toggle {
-            background-color: #1A202C;
-            color: #fff;
-            border: none;
-            padding: 12px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            margin: 20px;
-            text-align: center;
-        }
-
-        .menu-toggle:hover {
-            background-color: #3B82F6;
-        }
-
-        /* Dropdown menu container */
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
-
-        /* Dropdown button */
-        .dropdown-button {
-            background-color: #1A202C;
-            color: white;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            border: none;
-        }
-
-        .dropdown-button:hover {
-            background-color: #3B82F6;
-        }
-
-        /* Dropdown content */
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #1A202C;
-            min-width: 160px;
-            z-index: 1;
-            border-radius: 8px;
-            margin-top: 5px;
-        }
-
-        .dropdown-content a {
-            color: #fff;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            font-size: 16px;
-            font-weight: bold;
-            text-transform: capitalize;
-            transition: background-color 0.3s ease;
-            border-radius: 8px;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #3B82F6;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        /* Content area */
-        .content-area {
-            margin-left: 250px;
-            padding: 30px;
-            flex-grow: 1;
-            background-color: #F9FAFB;
-            overflow-y: auto;
-            height: 100%;
-            transition: background-color 0.3s ease;
-        }
-
-        .content-area.dark {
-            background-color: #1A202C;
-        }
-
-        .content {
-            display: none;
-            background: #fff;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-            transform: translateY(20px);
-            transition: transform 0.3s ease, opacity 0.3s ease;
-        }
-
-        .content.dark {
-            background-color: #333;
-            color: #fff;
-        }
-
-        .content.active {
-            display: block;
-            transform: translateY(0);
-        }
-
-        /* Video iframe container */
-        .video-container {
-            position: relative;
-            padding-top: 56.25%; /* 16:9 Aspect Ratio */
-            height: 0;
-            overflow: hidden;
-            width: 100%;
-        }
-
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-
-        /* Time display */
-        .time {
-            font-size: 22px;
-            margin-top: 20px;
-            color: #3B82F6;
-            font-weight: bold;
-        }
-
-        .time.dark {
-            color: #A7C7FF;
-        }
-
-        /* Status display */
-        .wifi-status {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 16px;
-            color: green;
-            font-weight: bold;
-        }
-
-        .wifi-status.dark {
-            color: lightgreen;
+            background-color: #ff5722;
         }
 
         /* Responsive Design */
         @media only screen and (max-width: 768px) {
-            body {
+            .nav-bar {
                 flex-direction: column;
+                padding: 10px 0;
             }
 
-            .content-area {
-                margin-left: 0;
-                padding: 10px;
+            .nav-bar a {
+                margin: 10px 0;
             }
 
-            .dropdown-button {
-                font-size: 16px;
+            .main-content {
+                padding: 20px;
+            }
+
+            .card {
+                padding: 20px;
             }
         }
 
     </style>
-
-    <script>
-        // JavaScript function to handle tab changes
-        function showTab(tabId) {
-            var tabs = document.querySelectorAll('.content');
-            tabs.forEach(function (tab) {
-                tab.classList.remove('active');
-            });
-
-            // Display the selected tab content
-            document.getElementById(tabId).classList.add('active');
-        }
-
-        // Function to update the time in Thailand
-        function updateTime() {
-            var timeElement = document.getElementById('time');
-            var now = new Date();
-            var thailandOffset = 7; // Thailand is UTC+7
-            now.setHours(now.getHours() + thailandOffset);
-            var timeString = now.toLocaleString('th-TH', { hour12: false });
-            timeElement.textContent = "เวลาประเทศไทย: " + timeString;
-        }
-
-        // Function to check Wi-Fi status (whether online or offline)
-        function checkWifiStatus() {
-            var wifiStatus = document.getElementById('wifi-status');
-            if (navigator.onLine) {
-                wifiStatus.textContent = "สถานะ Wi-Fi: ออนไลน์";
-                wifiStatus.style.color = "green";
-            } else {
-                wifiStatus.textContent = "สถานะ Wi-Fi: ออฟไลน์";
-                wifiStatus.style.color = "red";
-            }
-        }
-
-        // Function to toggle theme
-        function toggleTheme() {
-            document.body.classList.toggle('dark');
-            document.querySelector('.content-area').classList.toggle('dark');
-            document.querySelectorAll('.content').forEach(function (content) {
-                content.classList.toggle('dark');
-            });
-            document.querySelector('.time').classList.toggle('dark');
-            document.querySelector('.wifi-status').classList.toggle('dark');
-        }
-
-        window.onload = function () {
-            setInterval(updateTime, 1000); // Update time every second
-            setInterval(checkWifiStatus, 1000); // Check Wi-Fi status every second
-        };
-    </script>
 </head>
 
 <body>
-    <!-- Button to toggle theme -->
-    <button class="theme-toggle" onclick="toggleTheme()">สลับธีม</button>
+    <!-- Theme Toggle Button -->
+    <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
-    <!-- Button to toggle dropdown -->
-    <div class="dropdown">
-        <button class="dropdown-button">เมนู</button>
-        <div class="dropdown-content">
-            <a href="#" onclick="showTab('tab1')">SERVER</a>
-            <a href="#" onclick="showTab('tab2')">INTERNET</a>
-            <a href="#" onclick="showTab('tab3')">LIVE STREAM</a>
-            <a href="#" onclick="showTab('tab4')">CHAT GPT</a>
+    <!-- Navigation Bar -->
+    <div class="nav-bar">
+        <a href="#server" onclick="navigate('server')">SERVER</a>
+        <a href="#internet" onclick="navigate('internet')">INTERNET</a>
+        <a href="#live-stream" onclick="navigate('live-stream')">LIVE STREAM</a>
+        <a href="#chat-gpt" onclick="navigate('chat-gpt')">CHAT GPT</a>
+    </div>
+
+    <!-- Main Content Area -->
+    <div id="server" class="main-content">
+        <div class="card">
+            <h2>SERVER</h2>
+            <iframe src="https://vdo.ninja/?view=ie7VQBu" allowfullscreen></iframe>
+            <p>Watch the server video stream below.</p>
         </div>
     </div>
 
-    <!-- Display Wi-Fi Status -->
-    <div id="wifi-status" class="wifi-status">สถานะ Wi-Fi: กำลังตรวจสอบ...</div>
-
-    <!-- Content area -->
-    <div class="content-area">
-        <!-- Time display -->
-        <div id="time" class="time"></div>
-
-        <!-- Content sections -->
-        <div id="tab1" class="content active">
-            <h1>TRUEID</h1>
-            <div class="video-container">
-                <iframe src="https://vdo.ninja/?view=ie7VQBu" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div id="tab2" class="content">
-            <h1>INTERNET</h1>
-            <div class="video-container">
-                <iframe src="https://vdo.ninja/?view=Diqkfuu&bitrate=20000" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div id="tab3" class="content">
-            <h1>PC</h1>
-            <div class="video-container">
-                <iframe src="https://vdo.ninja/?view=Diqkfuu&bitrate=20000" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div id="tab4" class="content">
-            <h1>CHAT GPT</h1>
-            <p>กำลังปรับปรุง...</p>
+    <div id="internet" class="main-content" style="display:none;">
+        <div class="card">
+            <h2>INTERNET</h2>
+            <iframe src="https://vdo.ninja/?view=Diqkfuu&bitrate=20000" allowfullscreen></iframe>
+            <p>Check out the internet connection stream.</p>
         </div>
     </div>
+
+    <div id="live-stream" class="main-content" style="display:none;">
+        <div class="card">
+            <h2>LIVE STREAM</h2>
+            <iframe src="https://vdo.ninja/?view=Diqkfuu&bitrate=30000" allowfullscreen></iframe>
+            <p>Live stream directly from the platform.</p>
+        </div>
+    </div>
+
+    <div id="chat-gpt" class="main-content" style="display:none;">
+        <div class="card">
+            <h2>CHAT GPT</h2>
+            <p>Welcome to ChatGPT. Here, you can talk to an AI!</p>
+        </div>
+    </div>
+
+    <script>
+        // Toggle theme
+        function toggleTheme() {
+            document.body.classList.toggle('dark');
+        }
+
+        // Navigation logic to show and hide content
+        function navigate(page) {
+            const sections = document.querySelectorAll('.main-content');
+            sections.forEach(section => {
+                section.style.display = 'none';
+            });
+
+            const activeSection = document.getElementById(page);
+            activeSection.style.display = 'flex';
+        }
+
+        // Initial setup to show server content on page load
+        window.onload = function () {
+            navigate('server');
+        };
+    </script>
 </body>
 
 </html>
